[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/main_menu/MainMenuBackground.png" type="Texture" id=1]
[ext_resource path="res://audio/music/White Bat Audio - Man Bat.mp3" type="AudioStream" id=2]
[ext_resource path="res://menus/main_menu/MainMenu.gd" type="Script" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -34.0
margin_right = 63.0
margin_bottom = 34.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_Options_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_Quit_Button_pressed"]
